--- a/app/src/main/res/layout/activity_chart_yearly.xml
+++ b/app/src/main/res/layout/activity_chart_yearly.xml
@@ -4,28 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityChartMonthly">
+    tools:context=".ActivityChartYearly">
 
     <TextView
-        android:id="@+id/chartMonthly_warnNoStaff"
-        android:text="There are no staff with Monthly Budget yet."
+        android:id="@+id/chartYearly_warnNoStaff"
+        android:text="There are no staff with Yearly Budget yet."
         android:textAlignment="center"
         android:layout_width="200dp"
         android:layout_height="wrap_content"/>
 
     <ProgressBar
-        android:id="@+id/chartMonthly_progressBar"
+        android:id="@+id/chartYearly_progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
 
     <LinearLayout
-        android:id="@+id/chartMonthly_wholeLayout"
+        android:id="@+id/chartYearly_wholeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.anychart.AnyChartView
-            android:id="@+id/chartViewMonthly"
+            android:id="@+id/chartViewYearly"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
