--- a/app/src/main/res/layout/activity_detail_report.xml
+++ b/app/src/main/res/layout/activity_detail_report.xml
@@ -129,7 +129,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="16sp"
-                            android:text="Budget -Monthly-"/>
+                            android:text="Budgett -Monthly-"/>
 
                         <TextView
                             android:id="@+id/detailReport_valueBudget1WithType"
